More style adjustments, this time to try and avoid right overflow.

--- a/webui/templates/default/site.css
+++ b/webui/templates/default/site.css
@@ -422,7 +422,7 @@ div.sortbar {
     background-color: #ddd;
     font: 12px 'courier new', fixed;
     white-space: nowrap;
-    width: 100%;
+    width: 95%;
     height: 40em;
     text-align: left;
     padding: 0.5em;
